Added HTML text

--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Simple Resume</title>
+<meta charset="utf-8">
+<meta name="Resume" content="width=device-width, initial-scale=1">
 <body>
+<h1>Ole Straumoy</h1>
+<p>Web Developer</p>
+<p>Email: mymail@mailexample.com | Phone: (+00) 12345678</p>
+
 
 </body>
 </html>
