added sections and footer

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
 <p>Web Developer</p>
 <p>Email: mymail@mailexample.com | Phone: (+00) 12345678</p>
 
+<section>
+    <h2>Education</h2>
+    <p><strong>Supreme genius degree in Computer Science,</strong> University of Internet - 2025</p>
+</section>
 
+<section>
+    <h2>Work Experience</h2>
+    <p><strong>Frontend Developer,</strong> Online Internet Agency (1998 - Present)</p>
+    <ul>
+        <li>Developed Landing pages for the marketing department.</li>
+        <li>Collaberated with desginers and backend developers</li>
+        <li>Showed Google how to center their logo</li>
+    </ul>
+</section>
+<footer>&copy; 2025 Ole Straumoy</footer>
 </body>
 </html>
